      Autoconf: Add support for libnl-tiny with pkg-config.
      Autoconf: Fix building of something-only libpcap.
      CI: Implement "make check".
      Fix autotools and CMake issues with snprintf test and sanitizers.
        Fixes issue #1396.
      filtertest: Add "-l" flag to use Linux BPF extensions.
      filtertest: Use ntohl() on the netmask to fix the -m option.
    Hurd:
      Support network capture devices too.
      Fix a few device activation bugs.
      Count and timestamp packets better.
      Add kernel filtering, fix userland filtering.
    OpenBSD:
      Use getprotobyname_r() correctly on OpenBSD.
    Linux:
      Do not use ether_hostton() from musl libc.
    Haiku:
      Look for ethers(5) in /boot/system/settings/network/.
    DAG:
      Always set PCAP_IF_CONNECTION_STATUS_NOT_APPLICABLE.
      In dag_findalldevs() handle known errors better.
      Trust dag_get_stream_erf_types() to be available.
      Require the API to have 64-bit streams support.
      Make device descriptions more useful, make dagN conditional.
      Use PCAP_ERROR_NO_SUCH_DEVICE more in dag_activate().
      Validate capture device names better.
      Enumerate streams without trying to lock them.
      If the environment variable ERF_FCS_BITS is set, require it to be either
        0 or 16 or 32.  Likewise for ERF_DONT_STRIP_FCS (either 0 or 1).
      Remove FCS quirks specific to 4.2S and 4.23S.
      Fix packet filtering with low snaplen.
      Fix ps_drop for stream drop counters.
      Add experimental packet transmit support.
    SNF:
      Fix packet filtering with low snaplen.
      Require SNF_VERSION_API >= 0x0003.
      Improve device descriptions and flags.
      Fill pcap_if_t in more consistently.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.6 libpcap release (so far!)
    Source code:
      Fix "tcpdump -i <n>" for something-only libpcap builds.
      Remove some unneeded includes.